--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-#port
+#porta
 server.port=8090
 
 # datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/liveb09Teste
-spring.datasource.username=root
-spring.datasource.password=maluco123
+spring.datasource.url=jdbc:mysql://mysql04-farm62.kinghost.net/liveb09
+spring.datasource.username=liveb09
+spring.datasource.password=pb2020
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # jpa
 spring.jpa.database-plataform= org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 
 #jwt
 compassito.jwt.secret=rm'!@N=Ke!~p8VTA2ZRK~nMDQX5Uvm!m'D&]{@Vr?G;2?XhbC:Qa#9#eMLN\}x3?JR3.2zr~v)gYF^8\:8>:XfB:Ww75N/emt9Yj[bQMNCWwW\J?N,nvH.<2\.r~w]*e~vgak)X"v8H`MH/7"2E`,^k@n<vE-wD3g9JWPy;CrY*.Kd2_D])=><D?YhBaSua5hW%{2]_FVXzb9`8FH^b[X3jzVER&:jw2<=c38=>L/zBq`}C6tT*cCSVC^c]-L}&/
